--- a/Web4/BlendedAPI/vyzva/Views/FAQ.html
+++ b/Web4/BlendedAPI/vyzva/Views/FAQ.html
@@ -14,7 +14,20 @@
 <div class="container">
   <!--<vyzva$faq$toc></vyzva$faq$toc>-->
 
-  <!--<h3>Dotazy studentů</h3>-->
+  <h3>Dotazy studentů</h3>
+  <vyzva$faq$item type="Student" title="Nemohu pokračovat ve studiu, protože nemám dostupné tlačítko Spustit u žádné lekce ani testu">
+    Pravděpodobně jste dokončil/dokončila <b>Vstupní test</b> nebo <b>Kontrolní test</b> a test čeká na ohodnocení <b>Učitelem</b>.
+  </vyzva$faq$item>
+  <vyzva$faq$item type="Student" title="Nefunguje mi přehrávání nebo nahrávání zvuku, co mám dělat?">
+    Před spuštěním výuky máte možnost spustit kontrolu přehrávání a nahrávání zvuku. Pokud se test z nějakého důvodu nezdaří, zkontrolujte zejména následující:
+    <ul>
+      <li>Při dotazu na povolení sdílení mikrofonu jste zvolili ano.</li>
+      <li>Zda máte správně nastavenou hlasitost přehrávání.</li>
+      <li>Zda máte mikrofon povolený v nastavení počítače.</li>
+      <li>Zda vám přehrávání a nahrávání zvuku funguje v ostatních aplikacích.</li>
+    </ul>
+    Pokud žádná z výše uvedených rad nepomůže, obraťte se na svého správce počítače.
+  </vyzva$faq$item>
 
   <h3>Dotazy učitelů</h3>
   <vyzva$faq$item type="Učitel" title="student zadal licenční klíc a já jeho jméno nevidím v seznamu">
