--- a/Web4/BlendedAPI/vyzva/Views/exercise.html
+++ b/Web4/BlendedAPI/vyzva/Views/exercise.html
@@ -1,5 +1,5 @@
 ﻿<!--***************** LAYOUT -->
-<div class="topbar topbar-exercise" collapsablemanager="modulecollapsable" >
+<div class="topbar topbar-exercise" collapsablemanager="modulecollapsable">
   <div class="container-fluid">
     <div class="container">
       <div class="pull-left" ng-include="'vyzva$common$topbarinnerleft.html'"></div>
@@ -10,46 +10,137 @@
       <div class="pull-right more fa fa-bars" ng-if="::!(exService.isTest && !modService.moduleDone)" ng-click="modulecollapsable.collapseToogle()"></div>
       <div class="pull-right" ng-include="'vyzva$common$topbarinnerright.html'"></div>
       <div class="clearfix"></div>
-      <div class="ex-items" ng-include="'vyzva$exercise$moduleheaderitem.html'"></div>
+      <div class="ex-items" ng-if="::modService.exShowPanel" ng-include="'vyzva$exercise$moduleheaderitem.html'"></div>
     </div>
   </div>
   <div class="container-fluid" style="background-color:white;" ng-include="'vyzva$exercise$modulemorepanel.html'"></div>
 </div>
 <div class="container lm-top-margin">
-  <div class="instruction" ng-include="'vyzva$exercise$instruction.html'"></div>
-  <div class="ex-lector-panel" ng-if="::exService.showLectorEvaluateRecordingPanel" ng-include="'vyzva$exercise$lector.html'"></div>
+  <div class="instruction" ng-include="'vyzva$exercise$instruction.html'" ng-if="::!exService.lectorMode"></div>
+  <div ng-include="'vyzva$exercise$lectorhelp.html'" ng-if="::exService.lectorMode && exService.exType==2"></div>
+  <div class="ex-lector-panel" ng-include="'vyzva$exercise$lector.html'" ng-if="::exService.lectorMode && exService.exType==2"></div>
+  <div ng-include="'vyzva$exercise$lectorlessonhelp.html'" ng-if="::exService.lectorMode && exService.exType==1"></div>
+  <div class="ex-lector-panel" ng-include="'vyzva$exercise$lectorlesson.html'" ng-if="::exService.lectorMode && exService.exType==1"></div>
+  <div ng-include="'vyzva$exercise$lectorpretesthelp.html'" ng-if="::exService.lectorMode && exService.exType==0"></div>
+  <div class="ex-lector-panel" ng-include="'vyzva$exercise$lectorpretest.html'" ng-if="::exService.lectorMode && exService.exType==0"></div>
   <div class="new-ea lm-top-margin" data-show-exercise="" ex-service="::exService"></div>
 </div>
 <div ng-include="'vyzva$common$copyright.html'"></div>
 
-<!--***************** LECTOR PANEL -->
+<!--***************** LECTOR PANEL PRETEST -->
+<script type="text/ng-template" id="vyzva$exercise$lectorpretest.html">
+  <div class="alert alert-danger">
+    <button class="btn btn-danger" ng-click="::exService.resetPretest(-1)"><i class="fa fa-check"></i> Zopakovat Rozřazovací test</button>
+    nebo změnit úroveň na:
+    <button class="btn btn-danger" ng-click="::exService.resetPretest(0)">A1</button>
+    <button class="btn btn-danger" ng-click="::exService.resetPretest(1)">A2</button>
+    <button class="btn btn-danger" ng-click="::exService.resetPretest(2)">B1</button>
+    <button class="btn btn-danger" ng-click="::exService.resetPretest(3)">B2</button>
+  </div>
+</script>
+
+<script type="text/ng-template" id="vyzva$exercise$lectorpretesthelp.html">
+  <div class="alert help-panel help-warning" collapsablemanager="+exercisehelppretestteacher">
+    <div class="h4 help-header" ng-click="exercisehelppretestteacher.collapseToogle()">
+      <div class="more fa fa-question-circle"></div>
+      Ovlivnit výsledek Rozřazovacího testu
+    </div>
+    <div class="help-content" collapse="exercisehelppretestteacher.isCollapsed">
+      <div class="help-close" ng-click="exercisehelppretestteacher.collapseToogle()"><i class="fa fa-times"></i></div>
+      <div class="row">
+        <div class="col-sm-11">
+          <p>
+            Tlačítky níže můžete buďto dát studentovi k zopakování celý Rozřazovací test nebo mu změnit dosažený výsledek testu.
+          </p>
+          Poznámka: po těchto změnách bude student studovat kurz od začátku.
+          <div class="when-problem lm-top-margin" vyzva$common$whenproblem></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</script>
+
+<!--***************** LECTOR PANEL LEKCE -->
+<script type="text/ng-template" id="vyzva$exercise$lectorlesson.html">
+  <div class="alert alert-danger">
+    <h4>Celkové skore: <b>{{::modService.agregUser.score}}</b></h4>
+    <button class="btn btn-danger" ng-click="::exService.confirmLesson()"><i class="fa fa-check"></i>Zopakovat lekci</button>
+  </div>
+</script>
+
+<script type="text/ng-template" id="vyzva$exercise$lectorlessonhelp.html">
+  <div class="alert help-panel help-warning" collapsablemanager="+exercisehelplesonteacher">
+    <div class="h4 help-header" ng-click="exercisehelplesonteacher.collapseToogle()">
+      <div class="more fa fa-question-circle"></div>
+      Zopakovat lekci
+    </div>
+    <div class="help-content" collapse="exercisehelplesonteacher.isCollapsed">
+      <div class="help-close" ng-click="exercisehelplesonteacher.collapseToogle()"><i class="fa fa-times"></i></div>
+      <div class="row">
+        <div class="col-sm-11">
+          Máte kdykoliv možnost dát studentovi lekci k zopakování.
+          Provedete to stisknutím tlačítka <b>Zopakovat lekci</b>
+          <div class="when-problem lm-top-margin" vyzva$common$whenproblem></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</script>
+
+<!--***************** LECTOR PANEL TEST -->
 <script type="text/ng-template" id="vyzva$exercise$lector.html">
-  <div class="alert alert-success">
-    <div class="row">
-      <div class="col-sm-8">
+  <div class="alert alert-danger">
+    <div class="row" ng-if="::!exService.lectorCanEvaluateRecording">
+      <div class="col-sm-offset-2 col-sm-8">
+        <h4>Celkové skóre (bez vyhodnocených nahrávek): <b>{{::modService.agregUser.score}}%</b></h4>
+        <button class="btn btn-success" ng-click="::exService.confirmLesson(true)"><i class="fa fa-check"></i> Pokračovat v kurzu</button>
+        <button class="btn btn-danger" ng-click="::exService.confirmLesson(false)"><i class="fa fa-remove"></i> Zopakovat test</button>
+      </div>
+    </div>
+    <div class="row" ng-if="::exService.lectorCanEvaluateRecording">
+      <div class="col-sm-6">
         <h4>Vyhodnocení nahrávek studenta</h4>
-        <p>
-          Poslechněte si nahrávky studenta klikem na modrou šipku. Pak vyplňte hodnocení v procentech (0-100).
-          Po vyplnění všech hodnocení stiskněte <i>Uložit vyhodnocení</i>
-        </p>
+        Poslechněte si nahrávky studenta klikem na modrou šipku níže ve cvičení. Pak vyplňte vyhodnocení v procentech (0-100).
+        Po vyplnění všech hodnocení stiskněte <i>Uložit vyhodnocení</i>
+        <button class="btn btn-success" ng-click="::exService.saveLectorEvaluation()"><i class="fa fa-check"></i> Uložit vyhodnocení</button><br />
       </div>
-      <div class="col-sm-4">
-        <button class="btn btn-success btn-lg pull-right" ng-click="::exService.saveLectorEvaluation()"><i class="fa fa-check"></i> Uložit vyhodnocení</button>
+      <div class="col-sm-6">
+        <h5>Celkové skóre (bez vyhodnocených nahrávek): <b>{{::modService.agregUser.score}}%</b></h5>
+        <button class="btn btn-success" ng-click="::exService.confirmLesson(true)"><i class="fa fa-check"></i> Pokračovat v kurzu</button><br /><br />
+        <button class="btn btn-danger" ng-click="::exService.confirmLesson(false)"><i class="fa fa-check"></i> Zopakovat test</button>
       </div>
+    </div>
+  </div>
+</script>
+
+<script type="text/ng-template" id="vyzva$exercise$lectorhelp.html">
+  <div class="alert help-panel help-warning" collapsablemanager="+exercisehelpteacher">
+    <div class="h4 help-header" ng-click="exercisehelpteacher.collapseToogle()">
+      <div class="more fa fa-question-circle"></div>
+      Ohodnocení Kontrolního testu
+    </div>
+    <div class="help-content" collapse="exercisehelpteacher.isCollapsed">
+      <div class="help-close" ng-click="exercisehelpteacher.collapseToogle()"><i class="fa fa-times"></i></div>
+      Postupujte následovně<br />
+      <ol>
+        <li>Ohodnoťte nahrávky studenta v testu, pokud ovšem něco nahrál (na poslední stránce, označené v navigaci ikonou <i class="fa fa-question"></i>)</li>
+        <li>Na základě celkového skore studenta pak rozhodněte, zdali může ve výuce dále pokračovat nebo ne</li>
+      </ol>
+      Poznámka: pokud je z dosavadního skore zřejmé, že student test určitě nesplnil, pak nemá význam hodnotit jeho nahrávky.
+      <div class="when-problem lm-top-margin" vyzva$common$whenproblem></div>
     </div>
   </div>
 </script>
 
 <!--***************** MODULE HEADER ITEM -->
 <script type="text/ng-template" id="vyzva$exercise$moduleheaderitem.html">
-  <div ng-if="::modService.exShowPanel" ng-repeat="it in ::modService.exercises" class="ex-item"
+  <div ng-repeat="it in ::modService.exercises" class="ex-item"
        ng-class="{warning:it.background==1, success: it.background==2, danger: it.background==3, 'no-clickable': modService.exNoclickable, active: it.active}"
        ng-style="{cursor: modService.exNoclickable ? 'default' : 'pointer'}"
        ng-click="modService.exNoclickable ? null : modService.navigateExercise(it.idx)">
     <span ng-if="it.content==1" class="fa fa-check"></span>
     <span ng-if="it.content==2 || it.content==3">{{it.idx+1}}.</span>
     <span ng-if="it.content==5" class="fa fa-question"></span>
-    <!--<span ng-if="it.content==3">{{it.idx+1}}.</span>-->
     <span ng-if="it.content==4" ng-style="it.percent | vyzva$exmodule$percentheight : 28" class="progress-red">{{it.percent}}%</span>
     <span ng-if="it.content==4">{{it.percent}}%</span>
   </div>
@@ -61,7 +152,7 @@
     <div class="more-body-module position-relative">
       <div class="close-panel fa fa-times" ng-click="modulecollapsable.collapseToogle()"></div>
       <h4>{{::modService.node.title}}, podrobné informace:</h4>
-      <div vyzva$common$summary user="modService.user"></div>
+      <div vyzva$common$summary user="modService.agregUser"></div>
     </div>
   </div>
 </script>
@@ -99,7 +190,6 @@
   </div>
   <div collapsablemanager="excollapsed" ng-if="!modService.showResult()">
     <div ng-click="excollapsed.collapseToogle()" class="header h4">
-      <!--<span class="fa fa-question-circle"></span>-->
       {{::exService.instructionData.title}}
       <div class="more fa fa-question-circle"></div>
     </div>
