--- a/Web4/BlendedAPI/vyzva/Views/home.html
+++ b/Web4/BlendedAPI/vyzva/Views/home.html
@@ -2,7 +2,6 @@
   <div class="h4 help-header" ng-click="homehelpteacher.collapseToogle()">
     <div class="more fa fa-question-circle"></div>
     Nápověda k "Moje <i>Studijní skupiny</i>"
-    <!--Řízení výuky <i>Studentů</i> ve studijní skupině-->
   </div>
   <div class="help-content" collapse="homehelpteacher.isCollapsed">
     <div class="help-close" ng-click="homehelpteacher.collapseToogle()"><i class="fa fa-times"></i></div>
@@ -49,32 +48,32 @@
 <div class="alert help-panel help-warning" data-ng-if="::ts.ctx.onbehalfof" collapsablemanager="+homehelpstudentsresult">
   <div class="h3 help-header" ng-click="homehelpstudentsresult.collapseToogle()">
     <div class="more fa fa-question-circle"></div>
-    Výsledky studenta <b>{{::appService.schoolUserInfo().firstName}} {{::appService.schoolUserInfo().lastName}}</b>
+    Výsledky studenta: <b>{{::appService.schoolUserInfo().firstName}} {{::appService.schoolUserInfo().lastName}}</b>
   </div>
   <div class="help-content" collapse="homehelpstudentsresult.isCollapsed">
     <div class="help-close" ng-click="homehelpstudentsresult.collapseToogle()"><i class="fa fa-times"></i></div>
     <div class="row">
-      <div class="col-sm-6">
-        Toto okno umožňuje řídit výuku a prohlížet výsledky studenta.
+      <div class="col-sm-5">
+        Toto okno umožňuje řídit výuku a prohlížet výsledky vybraného studenta.
         <ul>
           <li>
-            <b>Vpravo nahoře</b> vidíte pro orientaci studentovo jméno a příjmení.
+            <b>Vpravo nahoře</b> vidíte pro orientaci jméno a příjmení studenta, jehož výsledky si prohlížíte.
           </li>
           <li>
-            <b>Vlevo nahoře</b> tlačítkem <i class="fa fa-arrow-circle-o-left"></i> opustíte prohlížení výsledků a vrátíte se zpět na svou stránku pro učitele.
+            <b>Vlevo nahoře</b> tlačítkem <i class="fa fa-arrow-circle-o-left" style="font-size:18px"></i> ukončíte prohlížení výsledků.
           </li>
           <li>
-            Níže si vyberte libovolnou lekci nebo test a klikněte na tlačítko <b>Výsledky</b>.
+            Níže si vyberte hotovou či rozpracovanou lekci či test a zobrazte podrobnosti.
           </li>
         </ul>
       </div>
-      <div class="col-sm-5">
-        <h4>Možnosti:</h4>
+      <div class="col-sm-6">
+        Mimo prohlížení detailních informací o studiu můžete ovlivnit průchod kurzem každého studenta následujícími způsoby:
         <ul>
-          <li>můžete si prohlédnout studentovo skóre v jednotlivých cvičeních</li>
-          <li>můžete se podívat jaké student udělal v jednotlivých cvičeních chyby</li>
-          <li>můžete si poslechnout všechny studentovy nahrávky</li>
-          <li>u Kontrolních testů hodnotíte nahrávky studenta</li>
+          <li>u hotových testů ohodnotit mluvený projev studenta (cvičení s mluveným projevem je vždy poslední cvičení testu)</li>
+          <li>u hotových testů rozhodnout o možnosti pokračovat ve výuce</li>
+          <li>dát studentovi k zopakování každou hotovou lekci nebo test</li>
+          <li>u Rozřazovacího testu změnit jazykovou úrovně kurzu nebo dát studentovi k zopakování celý Rozřazovací test</li>
         </ul>
       </div>
     </div>
@@ -86,23 +85,28 @@
   <div class="h4 help-header" ng-click="homehelpstudent.collapseToogle()">
     <div class="more fa fa-question-circle"></div>
     Nápověda: Průchod kurzem
-    <!--Jazyková výuka pro <b>Studenty</b> a <b>Studující učitele</b>-->
   </div>
   <div class="help-content" collapse="homehelpstudent.isCollapsed">
     <div class="help-close" ng-click="homehelpstudent.collapseToogle()"><i class="fa fa-times"></i></div>
     <div class="row">
-      <div class="col-sm-6">
-        Studium zahájíte kliknutím na tlačítko <b>Rozřazovací test</b><br />
-        Potom se Vám budou postupně otevírat další časti výuky (Studijní bloky)<br />
-        Klikem na tlačítko <b>Spustit</b> spustíte výuku příslušné části <br />
-        Klikem na tlačítko <b>Výsledky</b> se můžete podívat na detailní výsledky cvičení v lekci nebo testu
+      <div class="col-sm-5">
+        <h4>Postup</h4>
+        <ul>
+          <li>Průchod celým kurzem je velice snadný: v seznamu níže vyberte řádek, označený ikonkou <i class="fa fa-hand-o-right text-success" style="font-size:18px"></i>, a spusťte odpovídající část kurzu.</li>
+          <li>U splněných částí kurzu si můžete prohlížet výsledky tlačítkem <b>Výsledky</b></li>
+          <li>
+            Testy, označené ikonkou <i class="fa fa-line-chart text-success" style="font-size:18px"></i>, vyhodnocuje učitel.
+            Do doby než test vyhodnotí nemůžete pokračovat dále (řádek označen ikonkou <i class="fa fa-question text-success" style="font-size:18px"></i>)
+          </li>
+        </ul>
       </div>
       <div class="col-sm-6">
-        <b>Rozřazovací test</b>: určí vaší jazykovou úroveň <br />
-        <b>Vstupní test</b>: určí vaši výchozí úroveň v oblasti výslovnosti a pohotové ústní komunikace.<br />
-        <b>Lekce</b>: umožňuje vám zdokonalovat se v daném jazyce<br />
-        <b>Kontrolní test</b>: ukáže, jak se lepší vaše úroveň v oblasti výslovnosti a pohotové ústní komunikace.<br />
-        <b>Závěrečný test</b>: určí vaše celkové zlepšení
+        <h4>Podrobnější vysvětlení:</h4>
+        <ul>
+          <li>Studium zahájíte spuštěním <b>Rozřazovacího testu</b>. Po jeho ukončení se vám zpřístupní kurz vhodné jazykové úrovně.</li>
+          <li>Kurz je rozdělen na Studijní bloky - prvni Studijní blok studujete po splnění Vstupního testu, další Studijní bloky po ukončení předchozího Studijního bloku.</li>
+          <li>Studijní blok je ukončen Kontrolním testem. Poslední Studijní blok je ukončen Závěrečným testem, jehož úspěšným splněním ukončíte celý kurz</li>
+        </ul>
       </div>
     </div>
     <div class="when-problem" vyzva$common$whenproblem></div>
@@ -121,16 +125,16 @@
     <div class="clearfix"></div>
     <div class="close-panel fa fa-times" ng-click="homecollapsable.collapseToogle()"></div>
     <h4>{{::ts.title}}, podrobné informace:</h4>
-    <div vyzva$common$summary user="ts.user"></div>
+    <div vyzva$common$summary user="ts.agregCourseUser"></div>
   </div>
   <ul class="study-plan list-group">
-    <li class="home-test-hw"ng-click="::ts.navigateTestHw()" >
+    <li class="list-group-item home-test-hw" ng-click="::ts.navigateTestHw()">
       <button class="btn btn-warning"><i class="fa fa-volume-off"></i> Provést kontrolu <i class="fa fa-microphone"></i></button>
-      Kurz využívá přehrávání nahrávání zvuku (z/do počítače). Před prvním spuštěním kurzu doporučujeme
-      <h4>Zkontrolovat, zdali Vám mikrofon a sluchátka (reproduktor) fungují správně</h4>
+      Než se pustíte do výuky, doporučujeme Vám zkontrolovat, zdali Váš počítač umožňuje:
+      <h4>přehrávat zvuk do sluchátek či reprodukotru a nahrávat zvuk do mikrofonu.</h4>
     </li>
     <li class="list-group-item" ng-repeat="lesson in ::ts.lessons"
-        ng-style="::{cursor: lesson.rightButtonType && !lesson.cannotRun ? 'pointer' : 'default'}"
+        ng-style="::{cursor: lesson.rightButtonType ? 'pointer' : 'default'}"
         ng-click="::lesson.rightButtonType && ts.navigateLesson(lesson)"
         ng-class="::lesson | vyzva$home$nodeclass">
       <div ng-if="::!lesson.lessonType" ng-include="'vyzva$home$pretest.html'"></div>
@@ -140,47 +144,43 @@
 </div>
 
 <script type="text/ng-template" id="vyzva$home$lesson.html">
-    <div ng-include="'vyzva$home$leftmark.html'"></div>
-    <button class="btn btn-info right-mark" ng-if="::lesson.rightButtonType==2">Výsledky <i class="fa fa-eye"></i></button>
-    <button class="btn right-mark"
-            ng-class="::{'btn-success': !lesson.active, 'btn-succes-info': lesson.active}"
-            ng-if="::lesson.rightButtonType==1"
-            ng-disabled="::lesson.cannotRun">
-      Spustit <i class="fa fa-play"></i>
-    </button>
-    <h4>
-      <span ng-if="::lesson.lessonType==1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-      <span ng-if="::lesson.lessonType==2"><i class="fa fa-line-chart"></i></span>
-      {{::lesson.node.title}}
-    </h4>
-  </script>
+  <div ng-include="'vyzva$home$leftmark.html'"></div>
+  <button class="btn btn-info right-mark" ng-if="::lesson.rightButtonType==2">Výsledky <i class="fa fa-eye"></i></button>
+  <button class="btn right-mark"
+          ng-class="::{'btn-success': !lesson.active, 'btn-succes-info': lesson.active}"
+          ng-if="::lesson.rightButtonType==1"
+          ng-disabled="::lesson.cannotRun">
+    Spustit <i class="fa fa-play"></i>
+  </button>
+  <h4>
+    <span ng-if="::lesson.lessonType==1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+    <span ng-if="::lesson.lessonType==2"><i class="fa fa-line-chart"></i></span>
+    {{::lesson.node.title}}
+  </h4>
+</script>
 
-  <script type="text/ng-template" id="vyzva$home$pretest.html">
-    <div ng-include="'vyzva$home$leftmark.html'"></div>
-    <div data-ng-if="::lesson.status<2">
-      <p>
-        <button class="btn btn-success btn-lg" ng-disabled="::lesson.cannotRun" data-ng-click="::ts.navigateLesson(lesson)">
-          Rozřazovací test
-        </button>
-      </p>
-      Rozřazovací test určí vaši jazykovou úroveň (A1, A2, B1 nebo B2), na základě které, bude zvoleno odpovídající pokračování vašeho kurzu.
+<script type="text/ng-template" id="vyzva$home$pretest.html">
+  <div ng-include="'vyzva$home$leftmark.html'"></div>
+  <div data-ng-if="::lesson.status<2">
+    <p><button class="btn btn-success btn-lg" ng-disabled="::lesson.cannotRun" ng-click="::ts.navigateLesson(lesson)">Rozřazovací test</button></p>
+    Rozřazovací test určí vaši jazykovou úroveň (A1, A2, B1 nebo B2), na základě které, bude zvoleno odpovídající pokračování vašeho kurzu.
+  </div>
+  <div ng-if="::lesson.status>=2">
+    <h4>Rozřazovací test dokončen: vaše jazyková úroveň je {{::ts.pretestLevel | levelText}}</h4>
+    <div class="btn-group right-mark">
+      <button type="button" ng-repeat="level in ::ts.pretestLevels" class="btn btn-info btn-sm" ng-click="::ts.navigatePretestLevel(level)">{{level | levelText}} <i class="fa fa-eye"></i></button>
     </div>
-    <div data-ng-if="::lesson.status>=2">
-      <h4><i class="fa fa-line-chart"></i> Rozřazovací test dokončen: vaše jazyková úroveň je {{::ts.pretestLevel | levelText}}</h4>
-      <div class="btn-group right-mark">
-        <button type="button" ng-repeat="level in ::ts.pretestLevels" class="btn btn-info btn-sm" ng-click="::ts.navigatePretestLevel(level)">{{level | levelText}} <i class="fa fa-eye"></i></button>
-      </div>
-    </div>
-  </script>
+  </div>
+</script>
 
-  <script type="text/ng-template" id="vyzva$home$leftmark.html">
-    <div ng-if="::lesson.leftMarkType==1" class="left-mark icon"><i class="fa fa-hand-o-right"></i></div>
-    <div ng-if="::lesson.leftMarkType==2" class="left-mark level">{{::ts.pretestLevel | levelText}}</div>
-    <div ng-if="::lesson.leftMarkType==4" class="left-mark icon"><i class="fa fa-question"></i></div>
-    <div ng-if="::lesson.leftMarkType==3" class="left-mark percent-mark">
-      <div class="progress-bar">
-        <span ng-style="::lesson.user.score | vyzva$exmodule$percentheight : 32" class="progress-red">{{::lesson.user.score}}%</span>
-        <span>{{::lesson.user.score}}%</span>
-      </div>
+<script type="text/ng-template" id="vyzva$home$leftmark.html">
+  <div ng-if="::lesson.leftMarkType==1" class="left-mark icon"><i class="fa fa-hand-o-right"></i></div>
+  <div ng-if="::lesson.leftMarkType==2" class="left-mark level">{{::ts.pretestLevel | levelText}}</div>
+  <div ng-if="::lesson.leftMarkType==4" class="left-mark icon"><i class="fa fa-question"></i></div>
+  <div ng-if="::lesson.leftMarkType==3" class="left-mark percent-mark">
+    <div class="progress-bar">
+      <span ng-style="::lesson.agregUser.score | vyzva$exmodule$percentheight : 32" class="progress-red">{{::lesson.agregUser.score}}%</span>
+      <span>{{::lesson.agregUser.score}}%</span>
     </div>
-  </script>
+  </div>
+</script>
