--- a/Web4/BlendedAPI/vyzva/Views/lector.html
+++ b/Web4/BlendedAPI/vyzva/Views/lector.html
@@ -34,9 +34,11 @@
         <h4>Řízení výuky</h4>
         U zvoleného <i>Studenta</i> klikněte na <b>Výsledky</b>. To vám umožní:
         <ul>
-          <li>prohlížet výsledky práce <i>Studenta</i>, tj. skóre v jednotlivých cvičení včetně chyb, které student udělal.</li>
+          <li>prohlížet výsledky práce <i>Studenta</i>, tj. skóre v jednotlivých cvičení včetně chyb, které student udělal</li>
           <li>poslouchat nahrávky <i>Studentů</i> v rámci audio-orální metody</li>
           <li>ohodnotit kvalitu mluveného projevu <i>Studentů</i> ve vstupním, závěrečném a kontrolních testech</li>
+          <li>změnit úroveň, kterou <i>Student</i> studuje, tj. A1, A2, B1 nebo B2</li>
+          <li>řídit <i>Studentův</i> průchod kurzem, tj. <b>Povolit</b>/<b>Nepovolit</b> pokračování v kurzu po absolvování testu a umožnit opakování nepovedené lekce</li>
           <li>mít přehled o čase, který <i>Student</i> strávil poslechem nahrávek rodilých mluvčích, o množství jím nahraného zvuku apod.</li>
         </ul>
         <h4 class="lm-top-margin">Exporty do excelu</h4>
