--- a/Web4/BlendedAPI/vyzva/Views/testHw.html
+++ b/Web4/BlendedAPI/vyzva/Views/testHw.html
@@ -1,4 +1,4 @@
-﻿<div vyzva$common$backheader title="Test mikrofonu a sluchátek" class="container-fluid topbar"></div>
+﻿<div vyzva$common$backheader title="Test nahrávání a přehrávání zvuku" class="container-fluid topbar"></div>
 <div class="clearfix lm-bottom-margin"></div>
 <div class="container">
   <show-exercise-simple ex-service="::ts.exService"></show-exercise-simple>
